# MRSF

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MRSF-v1.0.md  README.md  SECURITY.md  mrsf-config.schema.json  mrsf.schema.json  package-lock.json  package.json  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml
cli/: .npmignore  README.md  package-lock.json  package.json
cli/src/: bin.ts  browser.ts  index.ts
docs/: .gitignore  index.md  package-lock.json  package.json  specification.md
docs/.vitepress/: config.mts
docs/cli/: api.md  index.md
docs/guide/: agent-skill.md  ci-integration.md  (+9 more)
examples/: README.md  api-reference.md  api-reference.md.review.yaml  architecture.md  architecture.md.review.yaml  contributing.md  contributing.md.review.yaml  data-model.md  data-model.md.review.yaml  demo-markdown-it.ts  demo-rehype.ts  deployment-guide.md  deployment-guide.md.review.yaml  package.json  security-policy.md  security-policy.md.review.yaml  smoke-test-node.sh  smoke-test-python.sh  vitest.config.ts
markdown-it/: .npmignore  README.md  package-lock.json  package.json
mcp/: .npmignore  README.md  esbuild.config.mjs  package-lock.json  package.json
plugins/: sync-types.mjs
python/: .coverage  .gitignore  README.md  pyproject.toml
python/src/mrsf/: __init__.py  comments.py  discovery.py  fuzzy.py  git.py  parser.py  reanchor.py  resolve_files.py  types.py  validator.py  writer.py
python/src/mrsf/cli/: add.py  init.py  list.py  main.py  reanchor.py  rename.py  resolve.py  status.py  validate.py  watch.py  watch_signals.py
python/src/mrsf/schemas/: __init__.py
python/tests/: test_comments.py  test_conformance.py  test_discovery.py  test_fuzzy.py  test_git.py  test_parser.py  test_reanchor.py  test_resolve_files.py  test_types.py  test_validator.py  test_watch.py  test_writer.py
vscode/: .vscodeignore  CHANGELOG.md  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+194 files in other folders)
